--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -64,6 +64,8 @@
     </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
+      <remove name="UrlRoutingModule-4.0" />
+      <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" preCondition="" />
     </modules>
     
     <validation validateIntegratedModeConfiguration="false" />
