--- a/Kartverket.Geonorge.Download/authentication.default.config
+++ b/Kartverket.Geonorge.Download/authentication.default.config
@@ -2,6 +2,9 @@
 <basicAuth>
   <users>
     <user username="" password="">
+      <roles>
+        <role name="dataset-provider"/>
+      </roles>
     </user>
   </users>
 </basicAuth>
