Add class library for api models

--- a/Geonorge.NedlastingApi/Geonorge.NedlastingApi.csproj
+++ b/Geonorge.NedlastingApi/Geonorge.NedlastingApi.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiModels.cs" />
+    <Compile Include="ApiModelsV1.cs" />
+    <Compile Include="ApiModelsV2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
