--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -40,7 +40,7 @@
   <appSettings>
     <add key="BuildVersionNumber" value="3.1" />
     <add key="GeonorgeUrl" value="//www.test.geonorge.no/" />
-    <add key="DownloadUrl" value="http://download.dev.geonorge.no/" />
+    <add key="DownloadUrl" value="http://nedlasting.dev.geonorge.no/" />
     <add key="RegistryUrl" value="http://register.dev.geonorge.no/" />
     <add key="KartkatalogenUrl" value="//kartkatalog.dev.geonorge.no/" />
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
