--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -44,6 +44,7 @@
     <add key="RegistryUrl" value="http://register.dev.geonorge.no/" />
     <add key="KartkatalogenUrl" value="//kartkatalog.dev.geonorge.no/" />
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
+    <add key="SmtpHost" value="mail.statkart.no" />
     <add key="EnvironmentName" value="dev" />
   </appSettings>
   <!--
