--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -9,6 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
     <section name="basicAuth" type="WebApi.BasicAuth.BasicAuthSection, WebApi.BasicAuth" />
+    <section name="system.identityModel" type="System.IdentityModel.Configuration.SystemIdentityModelSection, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+    <section name="system.identityModel.services" type="System.IdentityModel.Services.Configuration.SystemIdentityModelServicesSection, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+    <section name="kentor.authServices" type="Kentor.AuthServices.Configuration.KentorAuthServicesSection, Kentor.AuthServices" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <basicAuth configSource="authentication.config" />
@@ -71,6 +74,7 @@
     </httpProtocol>
     <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough" />
     <modules>
+      <add name="SessionAuthenticationModule" type="System.IdentityModel.Services.SessionAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       <remove name="FormsAuthentication" />
       <remove name="UrlRoutingModule-4.0" />
       <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" preCondition="" />
@@ -149,4 +153,22 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <kentor.authServices entityId="http://localhost:61236/" returnUrl="http://localhost:61236/">
+    <identityProviders>
+      <add entityId="https://testidp.statkart.no/simplesaml/saml2/idp/metadata.php" signOnUrl="https://testidp.statkart.no/simplesaml/saml2/idp/SSOService.php" binding="HttpRedirect" allowUnsolicitedAuthnResponse="false" logoutUrl="https://testidp.statkart.no/simplesaml/saml2/idp/SingleLogoutService.php">
+        <signingCertificate storeName="TrustedPublisher" storeLocation="LocalMachine" findValue="312d11889139a297faa4c3f024e3ca32bb183931" x509FindType="FindByThumbprint" />
+      </add>
+    </identityProviders>
+    <serviceCertificates>
+      <add storeName="TrustedPublisher" storeLocation="LocalMachine" findValue="7115DBA2C2E4A751C352B5569418124498FB4F78" x509FindType="FindByThumbprint" />
+    </serviceCertificates>
+  </kentor.authServices>
+  <system.identityModel>
+    <identityConfiguration />
+  </system.identityModel>
+  <system.identityModel.services>
+    <federationConfiguration>
+      <cookieHandler requireSsl="false" />
+    </federationConfiguration>
+  </system.identityModel.services>
 </configuration>
