--- a/Kartverket.Geonorge.Download/Web.Dev.config
+++ b/Kartverket.Geonorge.Download/Web.Dev.config
@@ -3,6 +3,19 @@
 <!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+  <kentor.authServices
+  entityId="http://nedlasting.dev.geonorge.no"
+  returnUrl="http://nedlasting.dev.geonorge.no"
+  xdt:Transform="Replace">
+    <identityProviders>
+      <add entityId="https://testidp.statkart.no/simplesaml/saml2/idp/metadata.php" signOnUrl="https://testidp.statkart.no/simplesaml/saml2/idp/SSOService.php" binding="HttpRedirect" allowUnsolicitedAuthnResponse="false" logoutUrl="https://testidp.statkart.no/simplesaml/saml2/idp/SingleLogoutService.php">
+        <signingCertificate storeName="TrustedPublisher" storeLocation="LocalMachine" findValue="312d11889139a297faa4c3f024e3ca32bb183931" x509FindType="FindByThumbprint" />
+      </add>
+    </identityProviders>
+    <serviceCertificates>
+      <add storeName="TrustedPublisher" storeLocation="LocalMachine" findValue="7115DBA2C2E4A751C352B5569418124498FB4F78" x509FindType="FindByThumbprint" />
+    </serviceCertificates>
+  </kentor.authServices>
   <!--
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
