--- a/Kartverket.Geonorge.Download/packages.config
+++ b/Kartverket.Geonorge.Download/packages.config
@@ -5,6 +5,9 @@
   <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Kentor.AuthServices" version="0.17.2" targetFramework="net452" />
+  <package id="Kentor.AuthServices.HttpModule" version="0.17.2" targetFramework="net452" />
+  <package id="Kentor.AuthServices.Mvc" version="0.17.2" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
