--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -31,12 +31,12 @@
       <param name="StaticLogFileName" value="false" />
       <datePattern value=".yyyyMMdd.lo\g" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger %message%newline" />
       </layout>
     </appender>
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%-6level - %message%newline" />
+        <conversionPattern value="%-6level %message%newline" />
       </layout>
     </appender>
   </log4net>
