Add octopus variables to default authentication.config

--- a/Kartverket.Geonorge.Download/authentication.default.config
+++ b/Kartverket.Geonorge.Download/authentication.default.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <basicAuth>
   <users>
-    <user username="" password="">
+    <user username="#{DatasetAdminUsername}" password="#{DatasetAdminPassword}">
       <roles>
         <role name="dataset-provider"/>
       </roles>
