Check requested area with FME dataset area limits (upon download)

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -45,6 +45,8 @@
     <add key="GeonorgeUrl" value="//www.test.geonorge.no/" />
     <add key="DownloadUrl" value="http://nedlasting.dev.geonorge.no/" />
     <add key="RegistryUrl" value="http://register.dev.geonorge.no/" />
+    <add key="FmeAreaChecker" value="http://testnedlasting.geonorge.no/fmedatastreaming/Util/AreaChecker.fmw?" />
+    <add key="FmeAreaCheckerEnabled" value="true" />
     <add key="KartkatalogenUrl" value="//kartkatalog.dev.geonorge.no/" />
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
     <add key="SmtpHost" value="mail.statkart.no" />
