--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -283,6 +283,10 @@
     <Compile Include="Migrations\201611171933141_AddMetadataNameToOrderItem.Designer.cs">
       <DependentUpon>201611171933141_AddMetadataNameToOrderItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611220752161_AddAreaAndProjectionNameToOrder.cs" />
+    <Compile Include="Migrations\201611220752161_AddAreaAndProjectionNameToOrder.Designer.cs">
+      <DependentUpon>201611220752161_AddAreaAndProjectionNameToOrder.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccessConstraint.cs" />
     <Compile Include="Models\Api\Internal\UpdateFileStatusRequest.cs" />
@@ -567,6 +571,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201611171933141_AddMetadataNameToOrderItem.resx">
       <DependentUpon>201611171933141_AddMetadataNameToOrderItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611220752161_AddAreaAndProjectionNameToOrder.resx">
+      <DependentUpon>201611220752161_AddAreaAndProjectionNameToOrder.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
