--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -49,7 +49,7 @@
     <add key="FmeAreaCheckerEnabled" value="true" />
     <add key="KartkatalogenUrl" value="//kartkatalog.dev.geonorge.no/" />
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
-    <add key="SmtpHost" value="mail.statkart.no" />
+    <add key="SmtpHost" value="smtp.altibox.no" />
     <add key="EnvironmentName" value="dev" />
   </appSettings>
   <!--
