--- a/Kartverket.Geonorge.Download.Tests/Kartverket.Geonorge.Download.Tests.csproj
+++ b/Kartverket.Geonorge.Download.Tests/Kartverket.Geonorge.Download.Tests.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Controllers\RequireHttpsNonLocalTest.cs" />
     <Compile Include="Models\OrderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\UpdateFileStatusServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
